cabal-version:      3.0

name:               csl-types
version:            1.0.1.0

author:             Vladimir Sinyakov
maintainer:         team@encoins.io

flag frontend
    description:
        Builds executables for the frontend.
    default: False
    manual:  True

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints

      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code

library
    import: lang
    exposed-modules:
      CSL
    if !flag(frontend)
      exposed-modules:
        CSL.Class
    build-depends:
      , base                          >= 4.9 && < 5
      , base16-bytestring
      , base64
      , aeson
      , bytestring
      , containers
      , data-default
      , deepseq
      , directory
      , extra
      , file-embed
      , freer-simple
      , flat
      , generic-arbitrary
      , ghc-prim
      , hex-text
      , lens
      , memory
      , mtl
      , openapi3
      , optparse-applicative
      , prettyprinter
      , QuickCheck
      , random
      , text
    if flag(frontend)
      build-depends:
        , plutus-tx-js
    else
      build-depends:
        , cardano-api
        , plutus-apps-extra
        , plutus-ledger
        , plutus-ledger-api
        , plutus-script-utils
        , plutus-tx
    hs-source-dirs: src

test-suite csl-types-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Main-Is:              Main.hs
  Build-Depends:
    , base                          >= 4.9 && < 5
    , aeson
    , bytestring
    , containers
    , csl-types
    , generic-arbitrary
    , hspec
    , plutus-tx-plugin
    -- , plutus-pab
    , text
    , QuickCheck
  if flag(frontend)
    build-depends:
      , plutus-tx-js
  else
    build-depends:
      , cardano-api
      , plutus-apps-extra
      , plutus-ledger
      , plutus-ledger-api
      , plutus-tx