cabal-version:      3.0

name:               plutus-apps-extra-test-utils
version:            1.0.0.0

author:             Vladimir Sinyakov
                    Grigory Petrov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import: lang
  exposed-modules:
    PlutusAppsExtra.Test.Utils
  other-modules:
    PlutusAppsExtra.Test.Utils.Gen
    PlutusAppsExtra.Test.Utils.Script
    PlutusAppsExtra.Test.Utils.Tx
  build-depends:
    base                          >= 4.9 && < 5,
    aeson                                  -any,
    bytestring                             -any,
    cardano-api                            -any,
    cardano-ledger-alonzo                  -any,
    cardano-ledger-core                    -any,
    cardano-node-emulator                  -any,
    containers                             -any,
    data-default                           -any,
    exceptions                             -any,
    from-sum                               -any,
    hspec                                  -any,
    mtl                                    -any,
    plutus-apps-extra                      -any,
    plutus-core                            -any,
    plutus-ledger                          -any,
    plutus-ledger-api                      -any,
    plutus-tx                              -any,
    random                                 -any,
    serialise                              -any,
    QuickCheck                             -any,
  hs-source-dirs: src