cabal-version:      3.0

name:               plutus-apps-extra
version:            1.0.0.0

author:             Vladimir Sinyakov
                    Grigory Petrov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints

      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      PlutusAppsExtra.Api.Blockfrost
      PlutusAppsExtra.Api.Kupo
      PlutusAppsExtra.Api.Maestro
      PlutusAppsExtra.Constraints.Balance
      PlutusAppsExtra.Constraints.OffChain
      PlutusAppsExtra.Constraints.OnChain
      PlutusAppsExtra.IO.ChainIndex
      PlutusAppsExtra.IO.ChainIndex.Kupo
      PlutusAppsExtra.IO.ChainIndex.Plutus
      PlutusAppsExtra.IO.Blockfrost
      PlutusAppsExtra.IO.Maestro
      PlutusAppsExtra.IO.Node
      PlutusAppsExtra.IO.Time
      PlutusAppsExtra.IO.Wallet
      PlutusAppsExtra.Scripts.CommonValidators
      PlutusAppsExtra.Scripts.OneShotCurrency
      PlutusAppsExtra.Types.Error
      PlutusAppsExtra.Types.Tx
      PlutusAppsExtra.Utils.Address
      PlutusAppsExtra.Utils.ChainIndex
      PlutusAppsExtra.Utils.Crypto
      PlutusAppsExtra.Utils.Datum
      PlutusAppsExtra.Utils.Blockfrost
      PlutusAppsExtra.Utils.Kupo
      PlutusAppsExtra.Utils.Maestro
      PlutusAppsExtra.Utils.Orphans
      PlutusAppsExtra.Utils.Scripts
      PlutusAppsExtra.Utils.Servant
      PlutusAppsExtra.Utils.Time
      PlutusAppsExtra.Utils.Tx
      PlutusAppsExtra.Utils.Value
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      bytestring                             -any,
      cardano-addresses                      -any,
      cardano-api                            -any,
      cardano-crypto-class                   -any,
      cardano-ledger-alonzo                  -any,
      cardano-ledger-babbage                 -any,
      cardano-ledger-byron                   -any,
      cardano-ledger-core                    -any,
      cardano-ledger-shelley                 -any,
      cardano-ledger-shelley-ma              -any,
      cardano-node-emulator                  -any,
      cardano-streaming                      -any,
      cardano-wallet-core                    -any,
      cborg                                  -any,
      containers                             -any,
      cryptonite                             -any,
      data-default                           -any,
      deriving-aeson                         -any,
      directory                              -any,
      either                                 -any,
      exceptions                             -any,
      extra                                  -any,
      file-embed                             -any,
      freer-extras                           -any,
      freer-simple                           -any,
      from-sum                               -any,
      flat                                   -any,
      hex-text                               -any,
      http-client                            -any,
      http-client-tls                        -any,
      http-media                             -any,
      http-types                             -any,
      lens                                   -any,
      lens-aeson                             -any,
      memory                                 -any,
      mtl                                    -any,
      openapi3                               -any,
      ouroboros-consensus-shelley            -any,
      ouroboros-network                      -any,
      plutus-core                            -any,
      plutus-chain-index                     -any,
      plutus-chain-index-core                -any,
      plutus-contract                        -any,
      plutus-contract-certification          -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-pab                             -any,
      plutus-script-utils                    -any,
      plutus-tx                              -any,
      plutus-tx-constraints                  -any,
      plutus-tx-extra                        -any,
      plutus-tx-plugin                       -any,
      purescript-bridge                      -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      servant                                -any,
      servant-client                         -any,
      servant-client-core                    -any,
      stm                                    -any,
      strict-containers                      -any,
      text                                   -any,
      text-class                             -any,
      time                                   -any,
      transformers                           -any,
      generic-arbitrary                      -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      uuid                                   -any,
    hs-source-dirs: src