cabal-version:      3.0

name:               plutus-apps-extra
version:            1.0.0.0

author:             Vladimir Sinyakov
                    Grigory Petrov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints

      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      PlutusAppsExtra
      PlutusAppsExtra.Api.Blockfrost
      PlutusAppsExtra.Api.Kupo
      PlutusAppsExtra.Api.Maestro
      PlutusAppsExtra.Constraints.Balance
      PlutusAppsExtra.Constraints.OffChain
      PlutusAppsExtra.Constraints.OnChain
      PlutusAppsExtra.IO.ChainIndex
      PlutusAppsExtra.IO.ChainIndex.Kupo
      PlutusAppsExtra.IO.ChainIndex.Maestro
      PlutusAppsExtra.IO.Blockfrost
      PlutusAppsExtra.IO.Maestro
      PlutusAppsExtra.IO.Tx
      PlutusAppsExtra.IO.Tx.Cardano
      PlutusAppsExtra.IO.Tx.Internal
      PlutusAppsExtra.IO.Tx.Maestro
      PlutusAppsExtra.IO.Time
      PlutusAppsExtra.IO.Wallet.Internal
      PlutusAppsExtra.IO.Wallet
      PlutusAppsExtra.PlutusApps
      PlutusAppsExtra.PlutusApps.ScriptLookups
      PlutusAppsExtra.PlutusApps.TxConstraints
      PlutusAppsExtra.PlutusApps.ValidityInterval
      PlutusAppsExtra.Scripts.CommonValidators
      PlutusAppsExtra.Scripts.OneShotCurrency
      PlutusAppsExtra.Types.Error
      PlutusAppsExtra.Types.Tx
      PlutusAppsExtra.Utils.Address
      PlutusAppsExtra.Utils.ChainIndex
      PlutusAppsExtra.Utils.Crypto
      PlutusAppsExtra.Utils.Datum
      PlutusAppsExtra.Utils.Blockfrost
      PlutusAppsExtra.Utils.Kupo
      PlutusAppsExtra.Utils.Maestro
      PlutusAppsExtra.Utils.Network
      PlutusAppsExtra.Utils.Orphans
      PlutusAppsExtra.Utils.Scripts
      PlutusAppsExtra.Utils.Servant
      PlutusAppsExtra.Utils.Time
      PlutusAppsExtra.Utils.Tx
      PlutusAppsExtra.Utils.Value
    other-modules:
      PlutusAppsExtra.IO.Node
    build-depends:
      , base16-bytestring
      , base                          >= 4.9 && < 5
      , base64
      , aeson
      , blockfrost-client
      , bytestring
      , cardano-addresses
      , cardano-api:{cardano-api, internal}
      , cardano-crypto-class
      , cardano-ledger-alonzo
      , cardano-ledger-babbage
      , cardano-ledger-byron
      , cardano-ledger-core
      , cardano-ledger-conway
      , cardano-ledger-shelley
      , cardano-node-emulator
      , cborg
      , containers
      , cryptonite
      , data-default
      , deriving-aeson
      , directory
      , either
      , exceptions
      , extra
      , file-embed
      , freer-extras
      , freer-simple
      , from-sum
      , flat
      , hex-text
      , http-client
      , http-client-tls
      , http-media
      , http-types
      , lens
      , lens-aeson
      , memory
      , mtl
      , openapi3
      , ouroboros-network
      , ouroboros-network-protocols
      , plutus-core                   ^>=1.27
      , plutus-ledger
      , plutus-ledger-api             ^>=1.27
      , plutus-script-utils
      , plutus-tx                     ^>=1.27
      , plutus-tx-extra
      , plutus-tx-plugin              ^>=1.27
      , purescript-bridge
      , random
      , req
      , safe-money
      , scientific
      , serialise
      , servant
      , servant-client
      , servant-client-core
      , stm
      , text
      , time
      , transformers
      , generic-arbitrary
      , prettyprinter
      , QuickCheck
      , uuid
      , vector

    hs-source-dirs: src